--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <head>
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
   <script type="text/javascript" src="https://js.stripe.com/v1/"></script>
-  <script type="text/javascript" src="require.js"></script>
+  <script type="text/javascript" src="templates.js"></script>
   <script type="text/javascript" src="stripe.js"></script>
   <script type="text/javascript" src="main.js"></script>
   <link rel="stylesheet" type="text/css" href="style.css">
